[FIX] web_enterprise: x2many list: align first cell
In x2many list without handle widget, the first cell of the edited
row got an additional 16px padding-left, making it unaligned with
the other records.

Task 2068261

closes odoo/enterprise#5654

--- a/web_enterprise/static/src/scss/form_view.scss
+++ b/web_enterprise/static/src/scss/form_view.scss
@@ -201,14 +201,10 @@
                             padding-left: $o-horizontal-padding;
                         }
                         tr > :first-child {
-                            &, .o_input {
-                                @include o-form-sheet-inner-left-padding;
-                            }
+                            @include o-form-sheet-inner-left-padding;
                         }
                         tr > :last-child {
-                            &, .o_input {
-                                @include o-form-sheet-inner-right-padding;
-                            }
+                            @include o-form-sheet-inner-right-padding;
                         }
                     }
                 }
